# personalized-email-campaign-designer

./: .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
examples/: cold-outreach.json  re-engagement-eu.json  welcome.json
skills/: main.md  sub-compliance-check.md  sub-framework-selector.md  sub-improvement-roadmap.md  sub-intake.md  sub-scoring-engine.md
src/personalized_email_campaign_designer/: __init__.py  __main__.py  challenge.py  cli.py  compliance_check.py  framework_selector.py  harness.py  improvement_roadmap.py  intake.py  knowledge_brain.py  schemas.py  scoring_engine.py  synthesizer.py
tests/: test-scenarios.md  test_harness.py
tools/: knowledge_updater.py
