[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-email-campaign-designer"
version = "1.0.0"
description = "Designs deeply personalized email campaigns using persuasion psychology, segmentation, and anti-spam/deliverability standards (Skill #151, cluster marketing-content-branding)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Skills Cluster: marketing-content-branding" }]
keywords = ["email-marketing", "personalization", "campaign", "deliverability", "compliance", "rfm", "aida", "gdpr", "can-spam"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Marketing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]
dependencies = []

[project.optional-dependencies]
crawl = ["crawl4ai>=0.3.0"]
dev = ["pytest>=7.0"]

[project.scripts]
email-campaign-designer = "personalized_email_campaign_designer.cli:main"

[project.urls]
Documentation = "https://github.com/skills/personalized-email-campaign-designer/blob/main/PROJECT-detail.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
